# Rubik-solver

./: .gitignore  Cubo.py  Estado.py  README.md  cube.json  cubo.py  cuboPruebas.json  main.py  pyproject.toml  resultado.txt  utils.py
Dominio/: Cubo.py  EspacioEstados.py  Frontera.py  NodoArbol.py  Problema.py  arbolBusqueda.py  busquedas.py  construirImagen.py  espacioEstados.py  nodoArbol.py  utils.py
FormarCubo/: construirImagen.py  contruirImagen.py
GUI/: CONTROLLER_rubiks.py  VIEW_rubiks.py
Presentacion/: CONTROLLER_rubiks.py  VIEW_rubiks.py
Pruebas/: cubomatriz.py  rotacion.py
formarCubo/: contruirImagen.py
res/json_files/: 10x10Profesores.json  cubo10x10.json  cubo2x2Numerado.json  cubo2x2Sol.json  cubo3x3Numerado.json  cuboProf2.json  cuboPruebas.json  cuboSolucionado.json  ejemplo6x6.json  problema.json  problema2.json  prueba[20-21-09].json  prueba[20-40-44].json  prueba[20-41-16].json  prueba[20-44-02].json  prueba[20-45-53].json  prueba[22-30-10].json
